Created endpoint to Update a Book and added fluent validation

--- a/4.api-rest/src/BookManager/appsettings.json
+++ b/4.api-rest/src/BookManager/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BooksDatabase": "Server=localhost;Database=Books;user=sa;password=YourStrong!Passw0rd;Encrypt=False"  
+    "BooksDatabase": "Server=localhost;Database=Books;user=sa;password=Lem0nCode!;Encrypt=False"
   },
   "WebsocketHostUrl": "http://localhost:8080",
   "BasicAuthentication": {
