--- a/4.api-rest/src/BookManager/BookManager.csproj
+++ b/4.api-rest/src/BookManager/BookManager.csproj
@@ -5,11 +5,16 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BookManager.Application\BookManager.Application.csproj" />
     <ProjectReference Include="..\BookManager.Persistence.SqlServer\BookManager.Persistence.SqlServer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
   <PropertyGroup>
