Added basic authentication with an attribute

--- a/4.api-rest/src/BookManager/appsettings.json
+++ b/4.api-rest/src/BookManager/appsettings.json
@@ -9,9 +9,8 @@
   "ConnectionStrings": {
     "BooksDatabase": "Server=localhost;Database=Books;user=sa;password=Lem0nCode!;Encrypt=False"
   },
-  "WebsocketHostUrl": "http://localhost:8080",
   "BasicAuthentication": {
     "Username": "admin",
-    "Password": "ciruela"
+    "Password": "blueberry"
   }
 }
